--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
             INTEGRANTES DEL EQUIPO
         </strong>
         <p style="font-size: 18px; line-height: 1.6;">Emiliano Loyola Cruz</p>
+        <p style="font-size: 18px; line-height: 1.6;">loyola.emiliano_21060506@cetis054.edu.mx </p>
         <p style="font-size: 18px; line-height: 1.6;">Perez Mendez Sergio Daniel</p>
+        <p style="font-size: 18px; line-height: 1.6;">perez.sergio.191195@cetis054.edu.mx </p>
         <p style="font-size: 18px; line-height: 1.6;">Montor Palacios Carlos Gael</p>
+        <p style="font-size: 18px; line-height: 1.6;">montor.carlos@cetis054.edu.mx </p>
 
         <strong style="display: block; margin-top: 20px; font-size: 22px; text-transform: uppercase;">
             SUBMÓDULO:
